[gd_scene load_steps=5 format=2]

[ext_resource path="res://rsc/scenes/fuel.tscn" type="PackedScene" id=1]
[ext_resource path="res://rsc/scenes/enemy.tscn" type="PackedScene" id=2]
[ext_resource path="res://rsc/scripts/spawner.gd" type="Script" id=3]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 400, 0, 0, 0, 0, 0, 401, 299, 0, 0, 0, 0, 399, 599, 0, 0, 0, 0, 0, 598, 0, 0, 0, 0, 0, 0 )
}

[node name="spawner" type="Node"]
script = ExtResource( 3 )
enemy = ExtResource( 2 )
fuel = ExtResource( 1 )

[node name="enemy_path" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="path_follow_2d" type="PathFollow2D" parent="enemy_path"]

[node name="spawn_enemy_timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="spawn_fuel_timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="timeout" from="spawn_enemy_timer" to="." method="_on_spawn_enemy_timer_timeout"]
[connection signal="timeout" from="spawn_fuel_timer" to="." method="_on_spawn_fuel_timer_timeout"]
